Fix git memoir svg overflow

--- a/src/subject/assets/git-memoir.css
+++ b/src/subject/assets/git-memoir.css
@@ -1,12 +1,12 @@
 git-memoir {
   display: block;
+  padding: 0.4em;
   border: 1px solid #c0c0c0;
   border-radius: 10px;
 }
 
 git-memoir svg {
   display: block;
-  margin: 0.4em;
 }
 
 git-memoir .controls {
